Add new character and appendix sections

--- a/Guida.tex
+++ b/Guida.tex
@@ -84,6 +84,8 @@
 
 %\input{data/Personaggi/Ranger.tex}
 
+\input{data/Personaggi/Sapiente.tex}
+
 \input{data/Personaggi/Stregone.tex}
 
 \input{data/Personaggi/Warlock.tex}
@@ -99,5 +101,9 @@
 \input{data/Eovras/Magia.tex}
 
 \input{data/Eovras/Mythrenwald.tex}
+
+\part{Appendice}
+
+\input{data/Appendice/Creature.tex}
 
 \end{document}
