--- a/data/Personaggi/Oggetti.tex
+++ b/data/Personaggi/Oggetti.tex
@@ -3,8 +3,55 @@
 
 \section{Oggetti legati ai personaggi dei giocatori}
 
+Questi sono oggetti particolarmente studiati che sono fatti per essere legati ai personaggi creati dai miei giocatori (e a Fillianore e Cianar), diventano più forti man mano che il loro livello aumenta e sono parte della loro storia.
+
 \subsection{Tavoletta di Minera Ioun}
 \textit{Tavoletta interattiva (artefatto) meravigliosa leggendaria, richiede sintonia con un Sapiente specializzato in Strategia}
+
+\subsubsection{Funzioni elementari}
+A partire dal 1° livello, la tavoletta può essere usata per accedere ad una mappa accurata (ma non omnicomprensiva) della regione di mondo in cui si trova, un cannocchiale, una bussola, un astrolabio e un telescopio. Inoltre permette di scattare delle fotografie e di prendere appunti. Quando viene utilizzata, galleggia a mezz'aria e si muove seguendo l'utilizzatore.\\ Con un'azione, l'utilizzatore può lanciare l'incantesimo \textit{Scurovisione} sulla tavoletta, e guardare attraverso il suo schermo per condividerne gli effetti.\\ La tavoletta ha infine un punteggio di Intelligenza di 14, e ha competenza in tutte le abilità su intelligenza, condividendo il bonus di competenza dell'utilizzatore. Con un'azione bonus, essa può effettuare prove di caratteristica su Intelligenza.\\ Utilizzare la tavoletta richiede almeno una mano libera.
+
+\subsubsection{Amo il fashion, infatti sono un fascista}
+A partire dal 1° livello, con un'azione bonus, la tavoletta permette di cambiare l'aspetto estetico dei vestiti dell'utilizzatore. Le modifiche all'abbigliamento sono meramente estetiche non hanno alcun effetto sulle statistiche, tuttavia alla vista e al tatto le modifiche all'abbigliamento sono indistinguibili da un abito reale.
+
+\subsubsection{Stasys}
+A partire dal 4° livello, quando una creatura nel raggio di 6 metri dall'utilizzatore è bersaglio di un attacco con arma a distanza (con un proiettile di velocità comparabile ai riflessi umani), l'utilizzatore può usare la sua reazione per aggiungere 1d6 alla sua CA.\\
+Se il colpo manca il bersaglio, esso rimane fermo a mezz'aria a 1,5 metri da esso fino alla fine del prossimo turno del bersaglio, dopodichè riparte con la stessa velocità e traiettoria.
+
+\subsubsection{Golem Gufo}
+A partire dal 4° livello, con un'azione l'utilizzatore può evocare un Golem Gufo (vedi appendice) che è in grado di controllare attraverso la tavoletta con un'azione bonus fintanto che esso si trovi entro 30m da lui.\\ Il Golem Gufo trasmette alla tavoletta suoni e immagini, agisce nello stesso turno dell'utilizzatore, ma a meno che l'utilizzatore non gli dia degli ordini usando la sua azione bonus, può compiere solo l'azione di Schivata.\\ Se l'utilizzatore è incapacitato, il Golem Gufo agisce autonomamente secondo quello che può ritenere essere il migliore corso d'azione.\\ Se il Golem Gufo viene abbattuto, l'utilizzatore deve passare un'ora di tempo a ripararlo per poterlo evocare di nuovo. Può essere evocato un solo Golem Gufo alla volta.
+
+\subsubsection{Golem aiutanti}
+A partire dall'8° livello l'utilizzatore può usare un'azione per lanciare l'incantesimo \textit{Servitore Inosservito} per evocare fino a tre Golem Aiutanti con le seguenti caratteristiche:
+\paragraph{Aspetto} I Golem Aiutanti non sono invisibili
+\paragraph{Classe armatura} la CA dei Golem Aiutanti è pari a 14
+\paragraph{Punteggi di caratteristica} I Golem Aiutanti hanno un punteggio di 8 in ogni statistica
+\paragraph{Punti ferita} I Golem Aiutanti hanno 30 punti ferita ciascuno.
+Se un Golem viene distrutto, prima di poterlo rievocare l'utilizzatore deve passare un'ora a ripararlo.
+
+\subsubsection{Analisi avanzata}
+A partire dall'8° livello, con un'azione, l'utilizzatore può lanciare l'incantesimo \textit{Visione del Vero} sulla tavoletta, e guardare attraverso il suo schermo per condividerne gli effetti. Quando l'incantesimo termina, la tavoletta è disabilitata fino all'alba successiva per l'eccesso di informazioni.\\ A partire dal 16° livello, può farlo senza ripercussioni.
+
+\subsubsection{Stasys+}
+A partire dal 12° livello, con un'azione l'utilizzatore può lanciare una versione limitata dell'incantesimo \textit{Fermare il Tempo}.\\
+Sceglie un bersaglio entro 9 metri e gli impone un tiro salvezza su Costituzione con CD pari a 8 + il suo bonus di competenza + il suo modificatore di Intelligenza. Se questo fallisce o sceglie di fallire, è congelato nel tempo fino alla fine del turno successivo dell'utilizzatore o finchè esso non vi pone fine con una reazione.\\
+Quando l'effetto termina, il bersaglio subisce tutti i danni accumulati durante il blocco temporale.
+
+\subsubsection{Controllare costrutti}
+A partire dal 12° livello, con un'azione l'utilizzatore può tentare di far prendere il controllo di un costrutto entro 18 metri all'intelligenza artificiale della tavoletta.\\ Per farlo deve superare una prova di Intelligenza con CD determinata dal DM in base alle dimensioni e alla complessità del costrutto.\\
+Se ha successo, l'intelligenza artificiale della tavoletta si trasferisce nel costrutto e può controllarlo come se fosse un suo corpo, tornando automaticamente nella tavoletta se questo viene distrutto.\\
+Questo privilegio può essere usato una volta per riposo breve.
+
+\subsubsection{Costrutti migliorati}
+A partire dal 16° livello, i punti ferita del Golem Gufo aumentano a 52 (8d8+10), i suoi punteggi di Forza e Destrezza aumentano a 20 e questo può portare in volo fino a due creature di taglia media.\\
+Uno dei Golem Aiutanti può essere sostituito da un Golem Guerriero (vedi appendice).
+
+\subsubsection{Macrocostrutto}
+A partire dal 19° livello, la tavoletta può prendere il controllo di cinque costrutti contemporaneamente.\\ Se lo fa, può assemblarli in un cazzo di Megazord (vedi appendice).
+
+\subsubsection{Stasys++}
+A partire dal 19° livello, con un'azione l'utilizzatore può lanciare l'incantesimo \textit{Fermare il Tempo}.\\
+Questo privilegio può essere usato una volta per riposo lungo.
 
 \subsection{Quaderno del Demiurgo}
 \textit{Quaderno (artefatto) meraviglioso leggendario, richiede sintonia con un Bardo del Collegio della Creazione}
@@ -15,45 +62,11 @@
 \subsection{Borsa degli arnesi stupefacenti di Skardy}
 \textit{Borsa di strumenti (artefatto) meravigliosa leggendaria, richiede sintonia con un Druido del Circolo della Luna}
 
-\subsection{Sintetizzatore di Ebano di Tauriel Halamis}
+\subsection{Sintetizzatore d'Ebano di Tauriel Halamis}
 \textit{Strumento musicale (artefatto) meraviglioso leggendario, richiede sintonia con un Warlock del Signore dell'Assurdo}
 
-\subsection{Scudo della Fedeltà dell'Abisso}
+\subsection{Scudo della Lealtà di Artorias}
 \textit{Amuleto (artefatto) meraviglioso leggendario, richiede sintonia con un Guerriero in grado di trasformarsi in un Lupo}
-
-%\section{Anello protettore di Sophos il Savio}
-
-%\textit{Artefatto meraviglioso leggendario, richiede sintonia con un Incantatore che stia venendo divorato dalla magia. \\ Questo oggetto è un estratto dalla Biblioteca Omnicomprensiva di Ker.}
-
-% \DndDropCapLine{D}{}urante le sue ricerche per scoprire quanto più possibile sulla magia, il mago Ælinor Könungru si è imbattuto in un incantesimo estremamente antico e potente, che appena lanciato ha cominciato a consumarne il corpo. Per fortuna è riuscito a contenerlo e ad isolarlo nel proprio braccio grazie al potere dell'Anello Protettore di Sophos il Savio. L'incantesimo non è tuttavia sparito, e i suoi segni sono rimasti impressi sulla pelle del mago.
-
-% \begin{DndReadAloud}
-%   \it
-%   L'Anello Protettore di Sophos il Savio permette a chi lo indossa di attingere ad una fonte di antica energia racchiusa nella sua gemma, che reagisce con alcuni tipi di incantesimi protettivi alimentandoli senza richiedere energia all'incantatore.
-% \end{DndReadAloud}
-
-% \subsection{Potere passivo}
-% L'anello può sostenere la concentrazione necessaria al mantenimento dell'incantesimo \textit{Limita Magie}. 
-
-% \subsection{Potere Attivo}
-% \textit{Requisito: 4 livelli in sintonia con l'anello.}\\
-% Un numero di volte pari al proprio bonus di competenza per riposo lungo, l'incantatore che usa l'anello può lanciare l'incantesimo \textit{scudo} senza consumare slot.
-
-% \subsection{Coscienza}
-% \textit{Requisito: 12 livelli in sintonia con l'anello.}\\
-% L'anello è considerato senziente, la sua personalità è simile a quella di Sophos il Savio ma non ne possiede i ricordi o le conoscenze.
-
-% \subsection{Corruzione mortale}
-% \textit{Requisito: 12 livelli in sintonia con l'anello.}\\
-% Una volta per riposo lungo, l'Incantatore può usare la sua reazione per spostare l'incantesimo \textit{Limita Magia} dal suo corpo ad un punto esterno. Fare questo tuttavia libera l'incantesimo nel suo corpo, il quale finché la bolla non viene ripristinata subisce 1d6+2 danni necrotici ogni volta che lancia un incantesimo e 1d4 danni necrotici ogni turno. Se l'incantatore mantiene un'altra concentrazione, ogni turno deve passare un TS su costituzione con CD pari alla propria CD del tiro salvezza contro gli incantesimi, altrimenti la perde. Se l'incantatore muore per questi danni, si trasforma in un divorato.
-
-%\section{STOCCO DI SARZEE}
-
-%\textit{Artefatto meraviglioso leggendario, richiede sintonia con un Bardo}
-
-%\section{Prigione Fluida di PATRONO DI SIMONE}
-
-%\textit{Artefatto meraviglioso leggendario, richiede sintonia con un Warlock}
 
 \section{Oggetti non legati ai personaggi dei giocatori}
 
