Translate and update Sapiente.tex

--- a/data/Personaggi/Sapiente.tex
+++ b/data/Personaggi/Sapiente.tex
@@ -1,1 +1,77 @@
 \chapter{Sapiente}
+\textit{Creato da u/LaserLlama, tradotto da Davide Borra e ribilanciato dal sottoscritto}
+
+\subsection{Menti magnifiche}
+Ci sono molte persone magnificamente intelligenti al mondo, ma poche sono veri Sapienti. Nati con l'innato desiderio di conoscere tutto ciò che possono, e il potenziale per un intelletto geniale, i Sapienti spendono la loro intera vita imparando tutto ciò che chi li circonda è disposto ad insegnargli. Spesso riconoscibili ad una giovane età, la loro insaziabile sete di conoscenza li conduce nelle più grandi librerie, università e nei principali luoghi di sapere. Desiderano viaggiare per scoprire i più reconditi segreti del mondo, spesso dedicando la propria vita all'avventura. Per un Sapiente, nessun prezzo è troppo alto per la promessa della scoperta.
+
+\subsection{Intenso interesse}
+I Sapienti sono molto concentrati nell'area di studi che anno scelto, e spesso diventano ossessionati dal conoscere tutto cià che possono sulla loro specialità. Nella loro missione per la scoperta, i Sapienti sono disposti a rinunciare ad ogni loro convinzione, politica o religiosa che sia, per acquisire le informazioni che anelano. Per essi, il loro deriderio di conoscenza è più importante della lealtà verso un gruppo o un'ideologia. \\
+Spesso pagando un grande prezzo, i Sapienti non si fermeranno davanti a nulla finché non avranno fatto una scoperta rivoluzionaria nella loro ariea di studio. non è raro incontrare uno di questi studiosi lontano dalla sicurezza di un'universita e le sue librerie.
+
+\subsection{Creare un Sapiente}
+Durante la creazione di un Sapiente, bisognerebbe considerare la loro istruzione e il loro livello di educazione formale. Era la promessa della migliore università il denaro può comprare? Oppure, era un figlio della strada, disposto a combattere per ogni frammento di conoscenza su cui potrebbe mettere le mani? Forse la loro mente è stata allenata fin dalla nascita per essere il perfetto strumenti di analisi per una nobile famiglia.\\
+Considera anche perché il tuo Sapiente ha scelto di affidarsi al proprio intelletto anziché usare i propri doni nello studio dell'arcano o al servizio di un potere più alto. Sono condannati a non poter lanciare neanche la più semplice magia? O hanno giurato di non affidarsi mai al potere che ha distrutto la loro famiglia?\\
+Infine, perchè ha scelto di diventare un avventuriero invece che vivere una vita accademica? Ha scelto di andare oltre il normale studio e dedicarsi alle infinite scoperte dell'avventura? Oppure ha sempre avuto una passione per lo studio del mondo?
+
+\begin{DndSidebar}{Sapiente e Multiclasse}
+\paragraph{Punteggio di caratteristica minimo} Il personaggio multiclasse deve avere un punteggio di Intelligenza pari o superiore a 13 per acquisire un livello in questa classe o per acquisire un livello in un'altra classe se é gia un Sapiente,
+\paragraph{Competenze ottenute} Se il Sapiente non é la classe iniziale del personaggio, ecco quali competenze ottiene quando acquisisce il suo primo livello da Sapiente: armature leggere, un'abilità a scelta dalla lista delle abilità da Sapiente e un set di strumenti da artigiano a scelta.
+\end{DndSidebar}
+
+\section{Creazione}
+
+\subsection{Punti ferita}
+\paragraph{Dadi Vita} 1d8 per livello da Sapiente
+\paragraph{Punti ferita al 1° livello} 8 + il modificatore di Costituzione del Sapiente
+\paragraph{Punti ferita ai livelli successivi} 5 (1d8) + il modificatore di Costituzione del Sapiente
+
+\subsection{Competenze}
+\paragraph{Armature} Armature leggere
+\paragraph{Armi} Armi semplici, spade corte
+\paragraph{Strumenti} Un set di strumenti da artigiano a scelta
+\paragraph{Tiri Salvezza} Intelligenza, Saggezza
+\paragraph{Abilità} Tre a scelta tra Arcano, Storia, Indagare, Intuizione,  Medicina, Natura, Persuasione o Religione
+
+\subsection{Equipaggiamento iniziale}
+Inizia con l'equipaggiamento seguente, in aggiunta all'equipaggiamento conferito dal suo background:
+\begin{itemize}
+    \item {\it(a)} un'arma semplice a scelta o {\it(b)} una spada corta.
+    \item {\it(a)} una balestra leggera e 20 frecce o {\it(b)} due pugnali.
+    \item un set di strumenti da artigiano a scelta
+    \item un'armatura di cuoio, e una borsa da studioso
+    \item 5d4 x 10 mo
+\end{itemize}
+
+\subsection{Creazione Rapida}
+Puoi creare rapidamente un Sapiente usando le seguenti linee guida. Prima, metti il tuo punteggio di Intelligenza al punteggio più alto, seguito da Destrezza. Secondo, scegli il background nobile.
+
+\subsection{Privilegi del Sapiente}
+I privilegi ottenuti dal Sapiente a ogni livello sono riassunti in questa tabella.
+
+\begin{DndReadAloud}
+    \begin{DndTable}[header=Sapiente]{cccc}
+        Lv & PB& Privilegi di Classe & \begin{tabular}{cc}\ Abilità\ \\Accad.\end{tabular}\\
+        1° & +2 & \begin{tabular}{c}Attenta Analisi,\\Difesa predittiva                     \end{tabular}&--\\
+        2° & +2 & \begin{tabular}{c}Ambiti di Ricerca,\\ Intelletto Maestoso (d4)   \end{tabular}& 2\\
+        3° & +2 & \begin{tabular}{c}Disciplina Accademica                           \end{tabular}& 2\\
+        4° & +2 & \begin{tabular}{c}Aumento dei punteggi\\ di caratteristica          \end{tabular}& 3\\
+        5° & +3 & \begin{tabular}{c}Riflessi Accelerati (2)\\Studio Rapido\\Intelletto maestoso (d6)                         \end{tabular}& 3\\
+        6° & +3 & \begin{tabular}{c}Privilegio della\\Disciplina Accademica                           \end{tabular}& 3\\
+        7° & +3 & \begin{tabular}{c}Percezione Affinata                              \end{tabular} & 3\\
+        8° & +3 & \begin{tabular}{c}Aumento dei punteggi\\ di caratteristica          \end{tabular}& 4\\
+        9° & +4 & \begin{tabular}{c}Flash di Genialità                        \end{tabular} & 4\\
+        10° & +4 & \begin{tabular}{c}Esperto di Previsioni\\Intelletto maestoso (d8)                          \end{tabular}& 4\\
+        11° & +4 & \begin{tabular}{c}Potente Osservazione                             \end{tabular}& 4\\
+        12° & +4 & \begin{tabular}{c}Aumento dei punteggi\\ di caratteristica         \end{tabular}& 5\\
+        13° & +5 & \begin{tabular}{c}Privilegio della\\Disciplina Accademica                       \end{tabular}& 5\\
+        14° & +5 & \begin{tabular}{c}Volontà di Ferro                        \end{tabular}& 5\\
+        15° & +5 & \begin{tabular}{c}Intelletto Maestoso (d10)                             \end{tabular}& 5\\
+        16° & +5 & \begin{tabular}{c}Aumento dei punteggi\\ di caratteristica         \end{tabular}& 6\\
+        17° & +6 & \begin{tabular}{c}Privilegio della\\Disciplina Accademica,\\Riflessi Accelerati (3)                       \end{tabular}& 6\\
+        18° & +6 & \begin{tabular}{c}Profonda Comprensione                          \end{tabular}& 6\\
+        19° & +6 & \begin{tabular}{c}Aumento dei punteggi\\ di caratteristica         \end{tabular}& 6\\
+        20° & +6 & \begin{tabular}{c}Genio Indiscusso                             \end{tabular}& 6\\
+    \end{DndTable}
+\end{DndReadAloud}
+
+\subsection{Attenta Analisi}
