Update Guide and Output files

--- a/data/Personaggi/Sapiente.tex
+++ b/data/Personaggi/Sapiente.tex
@@ -50,7 +50,7 @@ I privilegi ottenuti dal Sapiente a ogni livello sono riassunti in questa tabell
 
 \begin{DndReadAloud}
     \begin{DndTable}[header=Sapiente]{cccc}
-        Lv & PB& Privilegi di Classe & \begin{tabular}{cc}\ Abilità\ \\Accad.\end{tabular}\\
+        Lv & PB& Privilegi di Classe & \begin{tabular}{cc}\ Ambiti di\ \\Ricerca\end{tabular}\\
         1° & +2 & \begin{tabular}{c}Attenta Analisi,\\Difesa predittiva                     \end{tabular}&--\\
         2° & +2 & \begin{tabular}{c}Ambiti di Ricerca,\\ Intelletto Maestoso (d4)   \end{tabular}& 2\\
         3° & +2 & \begin{tabular}{c}Disciplina Accademica                           \end{tabular}& 2\\
@@ -75,3 +75,68 @@ I privilegi ottenuti dal Sapiente a ogni livello sono riassunti in questa tabell
 \end{DndReadAloud}
 
 \subsection{Attenta Analisi}
+Il Sapiente può rapidamente analizzare un nemico. A partire dal 1° livello, un numero di volte pari al proprio bonusi di competenza ogni riposo breve, può usare un'azione bonus per analizzare una creatura che puoi vedere entro 18 metri, designandola come suo Mark. Finché si concentra sul suo Mark, come se si stesse concentrando su un incantesimo, il Sapiente ottiene i seguenti benefici:
+\begin{itemize}
+\item quando colpisce il Mark con un attacco o lo osserva per 1 minuto, può apprendere una delle seguenti caratteristiche a sua scelta: punteggio di caratteristica più alto, punteggio di caratteristica più basso, Classe Armatura, velocità, punti ferita massimi o tipo di creatura.
+\item può usare Intelligenza, al posto di Forza o Destrezza, per i tiri per colpire e per i danni contro il Mark.
+\item ha vantaggio su prove di caratteristica su Intelligenza e Saggezza per ottenere informazioni sul Mark.
+\item può fare un tiro salvezza su Intelligenza, anziché su Costituzione per mantenere la concentrazione sul Mark.
+\end{itemize}
+La creatura rimane indefinitamente il Mark del Sapiente, almeno finché il Sapiente non perde la concentrazione, la creatura non esce dal suo campo visivo, o il Sapiente usa questo privilegio su un'altra creatura.
+
+\subsection{Difesa predittiva}
+Lo stile di combattimento di un Sapiente, basato sull'osservazione e lo studio, gli permette di anticipare e schivare gli attacchi. A partire dal 1° livello, nel calcolo della Classe Armatura, il Sapiente può usare il proprio modificatore di Intelligenza al posto di quello di Destrezza.
+
+\subsection{Ambiti di Ricerca}
+Mai soddisfatto della propria conoscenza corrente, un Sapiente è sempre alla ricerca di un modo per espandere i propri orizzonti. Al 2° livello, il Sapiente apprende due Ambiti di Ricerca a sua scelta dalla lista al termine della descrizione della classe.\\
+Ne apprende un altro al 4°, 8°, 12° e 16° livello.
+
+\subsection{Intelletto Maestoso}
+La mente di un Sapiente è capace di maestose intuizini. A partire dal 2° livello, quando compie una prova di caratteristica che richiede o un tiro salvezza su Saggezza o Intelligenza, o quando tira per i danni contro il Mark, aggiunge il proprio Dado Intelletto, che è un d4, al tiro. \\
+Inoltre, quando una creatura che una creatura che il Sapiente vede colpisce il Mark con un attacco, il Sapiente può usare la sua reazione per aggiungere il proprio Dado Intelletto al danno dell'attacco. \\
+Il Dado Intelletto aumenta al 5° (d6), 10° (d8) e 15° (d10) livello.
+
+\subsection{Disciplina Accademica}
+Il Sapiente ha scelto di specializzarsi in un campo di studio. A partire dal 3° livello, sceglie una Disciplina Accademica: Stratega (e basta).\\ La Disciplina Accademica garantisce privilegi al 3° livello e poi di nuovo al 6°, 13° e al 17° livello.
+
+\subsection{Riflessi Accelerati}
+L'abilità di un Sapiente di reagire a ciò che lo circonda è quasi soprannaturale. A partire dal 5° livello, ottiene un bonus ai tiri di iniziativa pari al sio modificatore di Intelligenza, ed ottiene una seconda reazione ogni round. Un singolo effetto può scatenare una sola reazione. \\
+Quando raggiunge l'11° livello in questa classe può sacrificare la sua azione bonus per una reazione in più.\\
+Quando raggiunge il 17° livello in questa classe, ottiene una terza reazione ogni round, per un massimo di 4 reazioni.
+
+\subsection{Studio rapido}
+A partire dal 5° livello, il Sapiente è in grado di apprendere nuove capacità con estrema velocità. Ottiene competenza in un'abilità, oggetto o arma, o impara una nuova lingua a sua scelta. \\
+Inoltre, il Sapiente può spendere 1 ora (durante un riposo breve o lungo), può cambiare questa competenza o lingua con un'altra competenza o lingua a sua scelta, purché abbia accesso ad un esempio da cui imparare. Con esempio si intende un insegnante consenziente, un libro in un altra lingua o il manuale di un oggetto.
+
+\subsection{Percezione Affinata}
+A partire dal 7° livello, il Sapiente non può essere sorpreso a meno che non sia incapacitato.\\
+Inoltre, quando tira per iniziativa, può compiere una delle seguenti azioni prima che le altre creature agiscano:
+\begin{itemize}
+    \item Usare Attenta Analisi per scegliere come Mark una creatura che può vedere.
+    \item Fare una prova di caratteristica di Intelligenza per ottenere informazioni.
+    \item Fare una tra le azioni di Aiuto,  Prepararsi o Cercare.
+\end{itemize}
+
+\subsection{Lampo di Genialità}
+A partire dal 9° livello, un numero di volte pari al proprio bonus di competenza ogni riposo breve, come reazione quando una creatura entro 9 metri compie un tiro salvezza, il Sapiente può urlargli un consiglio, garantendogli un bonus al tiro pari al suo Dado Intelletto\\
+La creatura deve essere in grado di udire il Sapiente per ottenere questo bonus.
+
+\subsection{Esperto di Previsioni}
+Il Sapiente sembra sempre un passo avanti ai suoi nemici. A partire dal 10° livello, finché non è incapacitato, ha vantaggio su ogni tiro salvezza o prova di caratteristica che il Mark gli impone.
+
+\subsection{Potente Osservazione}
+Il Sapiente è in grado di identificare anche la più piccola debolezza e sfruttarla con spietata efficienza. A partire dall'11° livello, un numero di volte pari al proprio bonus di competenza ogni riposo breve può usare una reazione per aggiungere un tiro del proprio Dado Intelletto ad ogni tiro per i danni degli alleati, finché può vedere il bersaglio e l'attaccante lo può sentire.\\
+Inoltre, quando usala propria reazione per aggiungere il proprio Dado Intelletto ai danni di un attacco contro il proprio Mark, può tirare il Dado Intelletto due volte e usare il risultato più alto.
+
+\subsection{Volontà di Ferro}
+A partire dal 14° livello, il Sapiente ottiene competenza nei tiri salvezza su Carisma. Quando è costretto a fare un tiro salvezza su Carisma, ottiene un bonus al tiro pari al proprio Dado Intelletto.\\
+Inoltre, quando un effetto gli permette di fare un tiro salvezza su Intelligenza, Saggezza o Carisma per ridurre o annullare i danni, non prende danno in caso di successo e solo metà danno in caso di fallimento. Tuttavia subisce comunque gli effetti al di là del danno come specificato dalla sorgente.
+
+\subsection{Profonda Comprensione}
+A partire dal 18° livello, con un'azione, un Sapiente può prevedere la prossima mossa del suo Mark e avvertire gli alleati dei suoi piani. Fino all'inizio del prossimo turno del Sapiente, il Mark ha svantaggio in tutte le prove di caratteristica, tiri per colpire e tiri salvezza, e delle creature a scelta del Sapiente hanno vantaggio nei tiri salvezza che il Mark impone loro.\\
+Una volta utilizzato questo privilegio, non può essere usato di nuovo finché non si completa un riposo breve o lungo.
+
+\subsection{Genio Indiscusso}
+Il Sapiente realizza il proprio vero potenziale di genio. Al 20° livello, il suo punteggio di intelligenza aumenta di 4, fino ad un massimo di 24. Inoltre, quando tira il proprio Dado Intelletto e ottiene un risultato minore del proprio modificatore di Intelligenza, può sostituire al valore ottenuto il proprio modificatore di Intelligenza.
+
+\subsection{Ambiti di Ricerca}
