Update Italian language settings and include new file

--- a/Guida.tex
+++ b/Guida.tex
@@ -6,10 +6,10 @@
 % If no captions exist for a language, English will be used.
 %1. To load a language with babel:
 %	\usepackage[<lang>]{babel}
-%2. To load a language with polyglossia:
-%	\usepackage{polyglossia}
-%	\setdefaultlanguage{<lang>}
 \usepackage[italian]{babel}
+%2. To load a language with polyglossia:
+%\usepackage{polyglossia}
+%\setdefaultlanguage{italian}
 %\usepackage[italian]{babel}
 % For further options (multilanguage documents, hypenations, language environments...)
 % please refer to babel/polyglossia's documentation.
@@ -101,6 +101,8 @@
 \input{data/Eovras/Magia.tex}
 
 \input{data/Eovras/Mythrenwald.tex}
+
+\input{data/Eovras/Misteri.tex}
 
 \part{Appendice}
 
