Update pdfTeX version and image file usage

--- a/Misteri.tex
+++ b/Misteri.tex
@@ -34,7 +34,7 @@
 }
 
 \title{\large{\textit{Ciana presenta:}}\\
-    Più profondo dell'Abisso, più alto del Firmamento \\
+    I Misteri di Eovras \\
     \large {\textit{Alcuni potranno morire, ma è un sacrificio che sono pronto a fare.}}
     }
 \author{Ciana, ovviamente}
@@ -50,60 +50,6 @@
 
 \mainmatter
 
-\part{Ipotesi necessarie}
-
-\input{data/Ipotesi/Introduzione.tex}
-
-\input{data/Ipotesi/Regole.tex}
-
-\input{data/Ipotesi/Azioni.tex}
-
-\part{Opzioni per i personaggi}
-
-\input{data/Personaggi/Razze.tex}
-
-%\input{data/Personaggi/Artefice.tex}
-
-%\input{data/Personaggi/Barbaro.tex}
-
-%\input{data/Personaggi/Bardo.tex}
-
-\input{data/Personaggi/Chierico.tex}
-
-%\input{data/Personaggi/Druido.tex}
-
-\input{data/Personaggi/Guerriero.tex}
-
-\input{data/Personaggi/Ladro.tex}
-
-%\input{data/Personaggi/Mago.tex}
-
-\input{data/Personaggi/Monaco.tex}
-
-\input{data/Personaggi/Paladino.tex}
-
-%\input{data/Personaggi/Ranger.tex}
-
-\input{data/Personaggi/Sapiente.tex}
-
-\input{data/Personaggi/Stregone.tex}
-
-\input{data/Personaggi/Warlock.tex}
-
-\input{data/Personaggi/Talenti.tex}
-
-\input{data/Personaggi/Incantesimi.tex}
-
-\input{data/Personaggi/Oggetti.tex}
-
-\part{Il Mondo di Eovras}
-
-\input{data/Eovras/Magia.tex}
-
-\input{data/Eovras/Mythrenwald.tex}
-
-\part{Appendice}
-
-\input{data/Appendice/Creature.tex}
+\part{Arco della cripta di Caratheodoryx}
 
 \end{document}
