Add new section "Benefattore Temporale" and expand spell list

--- a/data/Personaggi/Warlock.tex
+++ b/data/Personaggi/Warlock.tex
@@ -100,3 +100,35 @@ L'influenza del patrono si espande alle creature intorno al Warlock. \\ Al 10° 
 
 Una volta per riposo lungo, il Warlock può imporre con un'azione a tutte le creature coscienti (compreso sè stesso) nel raggio di 18m di tirare dalla tabella della Magia Selvaggia e tirare il dado esplosivo del Warlock. Ogni creatura riceve il totale dei danni da lei tirati come danni psichici.
 
+\section{Benefattore Temporale}
+\textit{Questo patrono è largamente ispirato dai due "Sè del Futuro" di u/EinksArcana e u/Uroul su Reddit}
+
+\DndDropCapLine{L}{}a figura di Aiden Agathys è indubbiamente una delle più misteriose che i nostri eroi abbiano avuto modo di incontrare. In particolare, Lucian ha potuto sperimentare qualche... ragionevole grado di stranezza. Non si sa cosa voglia ottenere Aiden, ma l'identità che ha assunto è quella del Benefattore Temporale, un anonimo gentiluomo che contatta un giovane per offrirgli poteri e privilegi in cambio di... occasionale collaborazione.
+
+\subsection{Lista degli incantesimi ampliata}
+
+\begin{DndTable}{XX}
+  Livello dell'incantesimo  & Incantesimi \\
+  1°  & Dardo Tracciante, Parola Guaritrice\\
+  2°  & Localizza Oggetto, Zona di Verità\\
+  3°  & Chiaroveggenza, Velocità\\
+  4° & Divinazione, Localizza Creatura\\
+  5° & Conoscenza delle Leggende, Modificare Memoria\\
+\end{DndTable}
+
+\subsection{Biglietto da Visita}
+Al 1° livello, il Benefattore dona al suo Warlock il suo biglietto da visita. Le sue caratteristiche estetiche sono determinate dal DM in base alla vera identità del Benefattore (NB, non è strettamente necessario che si tratti di un biglietto da visita vero e proprio).\\
+Attraverso di esso, il Benefattore può mandare brevi messaggi al suo Warlock, il quale può a sua volta porgli attraverso di esso delle brevi domande alle quali ricevere altrettanto brevi risposte.\\
+Il Warlock apprende il trucchetto \textit{Guida}.
+
+\subsection{Aiutino}
+Occasionalmente, il Benefattore interviene per manipolare la sorte in favore del suo protetto.\\
+Al 6° livello, il Warlock ottiene il talento \textit{Fortunato}.
+
+\subsection{Progressi accelerati}
+Man mano che il potere del protetto cresce, anche i privilegi concessi dal Benefattore si fanno più forti.\\
+A partire dall'11° livello, il Warlock ottiene una supplica occulta aggiuntiva e ne ignora i requisiti di livello. Gli altri requisiti della supplica devono comunque essere soddisfatti.
+
+\subsection{Giro di Orologio}
+A partire dal 14° livello, il Warlock inizia a comprendere davvero una parte delle capacità del suo Benefattore.\\
+Un numero di volte pari al suo bonus di competenza per riposo breve, all'inizio del suo turno il Warlock può evocare una sua ombra temporale. Essa agisce al suo posto. Alla fine del suo turno, il Warlock sceglie se saltare al posto dell'ombra (e ufficializzare temporalmente il suo turno) o ripetere il turno con un corso d'azione diverso.
