--- a/Misteri.tex
+++ b/Misteri.tex
@@ -35,7 +35,7 @@
 
 \title{\large{\textit{Ciana presenta:}}\\
     I Misteri di Eovras \\
-    \large {\textit{Alcuni potranno morire, ma è un sacrificio che sono pronto a fare.}}
+    \large {\textit{Un gentiluomo risolve ogni enigma.}}
     }
 \author{Ciana, ovviamente}
 \date{}
@@ -50,6 +50,77 @@
 
 \mainmatter
 
-\part{Arco della cripta di Caratheodoryx}
+\section{Template dei misteri}
+
+\subsection{Domanda}
+Domanda
+
+\subsubsection{Indizi}
+\paragraph{Indizio 1} indizio\\
+...
+\paragraph{Indizio n} indizio
+
+\subsubsection{Risposta}
+Risposta
+
+\chapter{La cripta di Caratheodoryx}
+
+\section{Fillianore Halamis}
+
+\subsection{Dove va Fillianore ogni settimana la notte tra il giovedì e il venerdì?}
+
+\subsubsection{Indizi}
+\paragraph{Il portale} Per quanto ha potuto vedere Nihiter, il portale da cui è tornata Fillianore venerdì mattina si è aperto su una foresta... non si è capito bene quale o che area, ma è qualcosa.
+\paragraph{L'umore} Dopo essere tornata, Fillianore è sempre di ottimo umore ma stranamente silenziosa, quando di solito è molto chiacchierona. Quando le vengono chieste spiegazioni, si rifiuta di darne. Stando a sua madre Tauriel, è così ogni settimana.
+
+\section{Cianar de Mellin}
+
+\section{Aiden Agathys}
+
+\subsection{Chi diavolo è Aiden?}
+
+\subsubsection{Indizi}
+\paragraph{Il biglietto da visita} Aiden è entrato in contatto con Lucian tramite il suo "biglietto da visita", una piccola tessera di Ebano completamente liscia che Lucian ha acquistato nella bottega delle Mille Meravigliose Merci Magiche di Metelli Marco a Mythrenberg sotto l'albero di Mythrenbaum a Mythrenwald. Eppure il gestore del negozio non ricorda di averlo mai messo in vendita.
+\paragraph{Inconsistenza temporale} Quando Lucian ha preso il biglietto in mano, ha visto il tempo fermarsi. Allo stesso modo, la figura di Aiden appariva... temporalmente indefinita, sembrava avere moltissime età contemporaneamente, tra i 16 e i 40 anni approssimativamente, e sembrava continuamente disturbata. Quando ha provato a contravvenire a un suo ordine, il tempo si è resettato a qualche minuto prima, ma l'unico a esserne consapevole è stato Lucian.
+\paragraph{La visione} Aiden si è mostrato a Lucian in una versione desolata della sua città natale, Valbrembate sull'Orgelflum, come se ci fosse stato un incendio moltissimo tempo prima, eppure c'erano ancora dei tizzoni accesi in giro...
+\paragraph{Le fiamme} Le fiamme e l'energia che si manifestano da Aiden hanno un colore arancio-giallastro estremamente innaturale, dall'aria... malata, velenosa. I danni che Lucian ha subito quando ha provato a contrariarlo sono stati di tipo Radioso e Necrotico, due tipi abbastanza rari di danno. Allo stesso modo, intorno al suo biglietto da visita, la tavoletta di Doxos sembra impazzire, inizia a fare rumori gracchianti e sullo schermo appare la frase \textit{Niveles de radiación críticos, ¡aléjese de la fuente inmediatamente!}.
+\paragraph{Agathys} Aiden si è presentato come Aiden Agathys, potrebbe essere legato in qualche modo al leggendario arcimago dei ghiacci Agathys (a lui si deve l'incantesimo \textit{Armatura di Agathys})?
+\paragraph{Parole del potere} Quando Nihiter è andato a terra, Aiden è intervenuto attraverso Lucian lanciando quello che sembrava essere l'incantesimo \textit{Parola del Potere: Guarire}. Le parole del potere sono incantesimi di potenza smisurata, che pochissime creature sono in grado di lanciare, tra le quali quelle di natura mortale si contano sulle dita di una mano.
+
+\subsection{Cosa vuole Aiden?}
+Volente o nolente, Lucian ha stretto un patto con Aiden ed è diventato un Warlock di un Benefattore Temporale. I termini di questo patto non sono chiarissimi, ma sicuramente ci sono richieste che Lucian non può rifiutarsi di portare a termine.
+
+\subsubsection{Indizi}
+\paragraph{Segretezza} Aiden ha chiesto (o meglio, imposto) a Lucian la segretezza assoluta, specialmente nei confronti di Halimath.
+\paragraph{Interventi} Nonostante la sua figura minacciosa, fino ad adesso Aiden è stato relativamente d'aiuto, fornendo a Lucian nuovi poteri e addirittura intervenendo, e in modo non indifferente, per salvare la vita di Nihiter.
+
+\section{Gordie di Glasogonbjorn}
+
+\subsection{Chi è il ladro misterioso? (Risolto)}
+I nostri eroi sono seguiti da un ladro misterioso, estremamente furtivo e con un evidente caso di cleptomania in stadio avanzato. Di chi si tratta?
+
+\subsubsection{Indizi}
+\paragraph{Barili, comodini e mobili vari} Un grandissimo numero di oggetti di arredamento sembra essere a forma di halfling... ma mai due nella stessa stanza. Curioso...
+\paragraph{Tasche leggere} Occasionalmente, dai portafogli dei nostri eroi sembrano sparire delle monete... Ma le avranno perse, giusto...?
+
+\subsubsection{Risposta}
+Con un po' di abilità e di fortuna, Doxos è riuscito a entrare nel suo covo extraplanare e il ladro si è presentato. Si tratta di Gordie di Glasogonbjorn, un halfling così furtivo da riuscire a rimanere nascosto persino mentre ci parli insieme.
+
+\subsection{Perchè Gordie segue i nostri eroi?}
+Chiaramente, Gordie sta seguendo i membri del gruppo, ma perchè esattamente? Li ha presi di mira in particolare? Qualcuno lo paga? Si annoia?
+
+\section{La Cripta di Caratheodoryx}
+
+\subsection{Chi è Sertorius?}
+Sulla porta della Cripta di Caratheodoryx è inciso in draconico "A Sertorius, da Constantin". Ma chi è questo Sertorius?
+
+\subsubsection{Indizi}
+\paragraph{Da Constantin} Sebbene non si sappia molto nemmeno di lui, Constantin Caratheodoryx è stato un grande matematico che visse e lavorò nella città di Orgelgrad. Che si tratti di lui è chiaro, anche perchè la parola d'ordine per aprire la cripta è l'enunciato del suo teorema in Matematichese. Non è irragionevole pensare che si tratti di un caro amico o un parente.
+
+\subsection{Cos'è il tesoro di Caratheodoryx?}
+Quando Fillianore ha proposto ai nostri eroi di andare a cercare il tesoro di Caratheodoryx, non ha davvero specificato di cosa si trattasse. Potrebbe essere un generico tesoro qualunque?
+
+\subsubsection{Indizi}
+\paragraph{Guanto sinistro} In una cassa nel primo piano si trovava il guanto sinistro di una corazza di piastre, i membri del gruppo non sono riusciti a chiarire i suoi poteri ma evidentemente ha notevoli proprietà magiche, legate al fuoco e ai draghi.
 
 \end{document}
