Update timestamps and add new paragraph in Misteri.tex

--- a/Misteri.tex
+++ b/Misteri.tex
@@ -85,6 +85,7 @@ Risposta
 \paragraph{La visione} Aiden si è mostrato a Lucian in una versione desolata della sua città natale, Valbrembate sull'Orgelflum, come se ci fosse stato un incendio moltissimo tempo prima, eppure c'erano ancora dei tizzoni accesi in giro...
 \paragraph{Le fiamme} Le fiamme e l'energia che si manifestano da Aiden hanno un colore arancio-giallastro estremamente innaturale, dall'aria... malata, velenosa. I danni che Lucian ha subito quando ha provato a contrariarlo sono stati di tipo Radioso e Necrotico, due tipi abbastanza rari di danno. Allo stesso modo, intorno al suo biglietto da visita, la tavoletta di Doxos sembra impazzire, inizia a fare rumori gracchianti e sullo schermo appare la frase \textit{Niveles de radiación críticos, ¡aléjese de la fuente inmediatamente!}.
 \paragraph{Agathys} Aiden si è presentato come Aiden Agathys, potrebbe essere legato in qualche modo al leggendario arcimago dei ghiacci Agathys (a lui si deve l'incantesimo \textit{Armatura di Agathys})?
+\paragraph{Lavori} Non è chiaro se fosse tanto per dire, ma Aiden ha detto di aver lavorato nell'intrattenimento e come insegnante in passato, ma di dedicarsi alla "vendita all'ingrosso di materiali infiammabili", qualunque cosa significhi. Era anche vestito molto bene in effetti, ma l'abito sembrava molto rovinato.
 \paragraph{Parole del potere} Quando Nihiter è andato a terra, Aiden è intervenuto attraverso Lucian lanciando quello che sembrava essere l'incantesimo \textit{Parola del Potere: Guarire}. Le parole del potere sono incantesimi di potenza smisurata, che pochissime creature sono in grado di lanciare, tra le quali quelle di natura mortale si contano sulle dita di una mano.
 
 \subsection{Cosa vuole Aiden?}
