Update section title for Patrono Ultraterreno: Benefattore Temporale

--- a/data/Personaggi/Warlock.tex
+++ b/data/Personaggi/Warlock.tex
@@ -100,7 +100,7 @@ L'influenza del patrono si espande alle creature intorno al Warlock. \\ Al 10° 
 
 Una volta per riposo lungo, il Warlock può imporre con un'azione a tutte le creature coscienti (compreso sè stesso) nel raggio di 18m di tirare dalla tabella della Magia Selvaggia e tirare il dado esplosivo del Warlock. Ogni creatura riceve il totale dei danni da lei tirati come danni psichici.
 
-\section{Benefattore Temporale}
+\section{Patrono Ultraterreno: Benefattore Temporale}
 \textit{Questo patrono è largamente ispirato dai due "Sè del Futuro" di u/EinksArcana e u/Uroul su Reddit}
 
 \DndDropCapLine{L}{}a figura di Aiden Agathys è indubbiamente una delle più misteriose che i nostri eroi abbiano avuto modo di incontrare. In particolare, Lucian ha potuto sperimentare qualche... ragionevole grado di stranezza. Non si sa cosa voglia ottenere Aiden, ma l'identità che ha assunto è quella del Benefattore Temporale, un anonimo gentiluomo che contatta un giovane per offrirgli poteri e privilegi in cambio di... occasionale collaborazione.
