Update Warlock.tex with new DndReadAloud sections

--- a/data/Personaggi/Warlock.tex
+++ b/data/Personaggi/Warlock.tex
@@ -1,10 +1,5 @@
 \chapter{Warlock}
 
-\begin{DndReadAloud}
-  \it
-  "Uh" il giovane Aiden osservò i tre Galeb Duhr che lo circondavano e sparì con un sonoro "Pop". \\ Prima che i tre elementali potessero capire cosa fosse successo, il braccio di uno dei Guardiani di Pietra esplose in un lampo di energia arancione brillante.
-\end{DndReadAloud}
-
 \section{Privilegi di Classe Opzionali}
 
 \subsection{Suppliche Occulte}
@@ -59,6 +54,11 @@ A partire dal 14° livello, una volta per riposo breve, il Warlock può usare la
 
 \section{Patrono Ultraterreno: Signore dell'Assurdo}
 
+\begin{DndReadAloud}
+  \it
+  Dopo che il fantasmino la spaventò con un "Ciao!" alle spalle, Fillianore materializzò il suo violino e lanciò un acuto stridentissimo. Quando il raggio di energia colpì Amarilli, un triangolo ben vestito si materializzò con un "Wahoo!" per una ventina di volte prima che questa esplodesse in un crepitare di scintille arcobaleno.
+\end{DndReadAloud}
+
 \DndDropCapLine{N}{}el multiverso sono poche le creature in grado di esistere contemporaneamente in ogni realtà. È questo il caso dell'entità conosciuta nel nostro mondo come il Signore dell'Assurdo. A voi potrebbe essere familiare sotto altri nomi, come Il Triangolo, Fancy Dorito, Alex, o il suo preferito... Bill. \\ Il suo vero obiettivo non è chiaro, ma una cosa è certa: ciò che pretende dai suoi Warlock è una sana dose di divertimento.
 
 \subsection{Lista degli incantesimi ampliata}
@@ -102,6 +102,11 @@ Una volta per riposo lungo, il Warlock può imporre con un'azione a tutte le cre
 
 \section{Patrono Ultraterreno: Benefattore Temporale}
 \textit{Questo patrono è largamente ispirato dai due "Sè del Futuro" di u/EinksArcana e u/Uroul su Reddit}
+
+\begin{DndReadAloud}
+  \it
+  "Uh" il giovane Aiden osservò i tre Galeb Duhr che lo circondavano e sparì con un sonoro "Pop". \\ Prima che i tre elementali potessero capire cosa fosse successo, il braccio di uno dei Guardiani di Pietra esplose in un lampo di energia arancione brillante.
+\end{DndReadAloud}
 
 \DndDropCapLine{L}{}a figura di Aiden Agathys è indubbiamente una delle più misteriose che i nostri eroi abbiano avuto modo di incontrare. In particolare, Lucian ha potuto sperimentare qualche... ragionevole grado di stranezza. Non si sa cosa voglia ottenere Aiden, ma l'identità che ha assunto è quella del Benefattore Temporale, un anonimo gentiluomo che contatta un giovane per offrirgli poteri e privilegi in cambio di... occasionale collaborazione.
 
