Update files and fix typo in Warlock.tex

--- a/data/Personaggi/Warlock.tex
+++ b/data/Personaggi/Warlock.tex
@@ -56,7 +56,7 @@ A partire dal 14° livello, una volta per riposo breve, il Warlock può usare la
 
 \begin{DndReadAloud}
   \it
-  Dopo che il fantasmino la spaventò con un "Ciao!" alle spalle, Fillianore materializzò il suo violino e lanciò un acuto stridentissimo. Quando il raggio di energia colpì Amarilli, un triangolo ben vestito si materializzò con un "Wahoo!" per una ventina di volte prima che questa esplodesse in un crepitare di scintille arcobaleno.
+  Dopo che il fantasmino l'ebbe spaventata con un "Ciao!" alle spalle, Fillianore con un sobbalzo materializzò il suo violino e lanciò un acuto stridentissimo. Quando il raggio di energia colpì Amarilli, un triangolo ben vestito si materializzò con un "Wahoo!" per una ventina di volte prima che questa esplodesse in un crepitare di scintille arcobaleno.
 \end{DndReadAloud}
 
 \DndDropCapLine{N}{}el multiverso sono poche le creature in grado di esistere contemporaneamente in ogni realtà. È questo il caso dell'entità conosciuta nel nostro mondo come il Signore dell'Assurdo. A voi potrebbe essere familiare sotto altri nomi, come Il Triangolo, Fancy Dorito, Alex, o il suo preferito... Bill. \\ Il suo vero obiettivo non è chiaro, ma una cosa è certa: ciò che pretende dai suoi Warlock è una sana dose di divertimento.
